src/objects/Objective__c.object
<CustomObject>
    <description>Object created for the AME objectives reporting project. 
Object used to store objectives that can be independent, related to other objectives or related to an account</description>
    <fields>
        <fullName>AM_Can_IATA_support_the_airline__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox to be used for Account Issues and Priorities RT. Signals whether IATA can undertake any actions to support the airline in regards with the issue / priority.</description>
        <label>Can IATA support the airline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Comments__c</fullName>
        <label>Comments</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AM_Global__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to be used for Account Issues and Priorities RT, to represent the level at which the issue / priority is present.</description>
        <label>Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Issue_with_IATA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to be used for Account Issues and Priorities RT, to represent whether the account has this issue with IATA.</description>
        <label>Issue with IATA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Level_of_importance__c</fullName>
        <description>Field to be used for Account Issues and Priorities RT, to represent the level of importance of the item, from the accounts point of view.</description>
        <label>Level of Importance</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AM_Local__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to be used for Account Issues and Priorities RT, to represent the level at which the issue / priority is present.</description>
        <label>Local</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to be used for Account Issues and Priorities RT, to mark the items that are of public interest and that will be visible to all internal users.</description>
        <inlineHelpText>By checking this box, you make this record visible to all internal IATA users.</inlineHelpText>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Regional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to be used for Account Issues and Priorities RT, to represent the level at which the issue / priority is present.</description>
        <label>Regional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Related_to_Categories__c</fullName>
        <description>This field is used for the Account Management project to indicate to which sector and category the divisional-level activities are related.</description>
        <globalPicklist>Category</globalPicklist>
        <inlineHelpText>Use this field to indicate to which Category this activity relates</inlineHelpText>
        <label>Related to Categories</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AM_Related_to_Sector__c</fullName>
        <description>This field is used for the Account Management project to indicate to which sector and category the divisional-level activities are related.</description>
        <globalPicklist>Sector</globalPicklist>
        <inlineHelpText>Use this field to indicate to which sector this activity relates.</inlineHelpText>
        <label>Related to Sector</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AM_Source_Text__c</fullName>
        <description>Text version of the Issues and Priorities source</description>
        <label>Source</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Issue_or_Priority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Issue or Priority</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Objective__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Account Issues and Priorities</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Objective__c</referenceTo>
        <relationshipLabel>Objectives (Account Issue or Priority)</relationshipLabel>
        <relationshipName>Objectives1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account an objective may be related to</description>
        <inlineHelpText>Please search for the account this objective is related to. Only Airline HQ accounts are available in the search</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Airline Headquarters, Agency, Airline Headquarters, Airline Branch, General Sales Agent Headquarters, Others</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Areas_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox updated by the “Objective trigger”. Checked if all child objectives the current objectives is supposed to cascade down were created.</description>
        <inlineHelpText>No need to modify it. Checked automatically if all the area objectives this regional objective is supposed to cascade down, were created.</inlineHelpText>
        <label>All Areas Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Regions_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox updated by the “Objective trigger”. Checked if all child objectives the current objective is supposed to cascade down were created.</description>
        <inlineHelpText>No need to modify it. Checked automatically if all the region objectives this divisional objective is supposed to cascade down, were created.</inlineHelpText>
        <label>All Regions Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Equivalent to the sub-region in the ISO country table. Area this objective is related to.</description>
        <inlineHelpText>Are/Sub-region this objective is related to.</inlineHelpText>
        <label>Area</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Eastern Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gulf Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Levant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saudi &amp; Yemen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Western Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central West Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arg-Par-Uru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can-Ber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia-Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peru-Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venezuela-Cuba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Republic of Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG_LK_MY_BD_MV_BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China-Mongolia-North Korea</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefits_to_Account__c</fullName>
        <label>Benefits to Account</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cascade_To_Area__c</fullName>
        <description>Areas a regional objective can cascade to.</description>
        <inlineHelpText>Please select the areas/sub-regions that should have sub-objectives contributing with this objective at the regional level</inlineHelpText>
        <label>Cascade To Area</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Eastern Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gulf Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Levant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA-YE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Western Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central West Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arg-Par-Uru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can-Ber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia-Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peru-Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venezuela-Cuba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Republic of Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG_LK_MY_BD_MV_BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China-Mongolia-North Korea</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cascade_To_Region__c</fullName>
        <description>Regions a divisional objective can cascade to.</description>
        <inlineHelpText>Please select the Regions that should have sub-objectives contributing with this objective at the divisional level</inlineHelpText>
        <label>Cascade To Region</label>
        <picklist>
            <picklistValues>
                <fullName>Africa &amp; Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia &amp; Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China &amp; North Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Children_Current_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If the current objective has sub-objectives, this field will be updated via a trigger to show the SUM of its child&apos;s Current Value</description>
        <inlineHelpText>If the current objective has sub-objectives, this field will be updated to show the SUM of its child&apos;s Current Value</inlineHelpText>
        <label>Children Current Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Children_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If the current objective has sub-objectives, this field will be updated via a trigger to show the SUM of its child&apos;s Forecast</description>
        <inlineHelpText>If the current objective has sub-objectives, this field will be updated to show the SUM of its child&apos;s forecast</inlineHelpText>
        <label>Children Forecast</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How much has been achieve on this objective related to the target</description>
        <inlineHelpText>How much has been achieve on this objective related to the target</inlineHelpText>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <defaultValue>DATE( YEAR(TODAY()), 12, 31)</defaultValue>
        <description>By when the objective should be complete</description>
        <inlineHelpText>By when the objective should be complete. By default the end of the current year</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Not visible for the end user, but a temp field needed by the Objective naming convention</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Long description</description>
        <inlineHelpText>This is where you describe the objective, please don&apos;t use it to add comments</inlineHelpText>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Division this objective is related to.</description>
        <inlineHelpText>Division this objective is related to.</inlineHelpText>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>APCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-Divisional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecast_Deadline__c</fullName>
        <defaultValue>DATE( YEAR(TODAY()), 12, 31)</defaultValue>
        <description>By when this objective is expected to be complete</description>
        <inlineHelpText>By when this objective is expected to be complete</inlineHelpText>
        <label>Forecast Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Progress__c</fullName>
        <formula>if ( Target__c == 0, 0, (Forecast__c) / Target__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Progress</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <description>Forecast at the end of the forecast deadline date</description>
        <inlineHelpText>How much is expected to be acomplished (Current values) by the forecast deadline date</inlineHelpText>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <description>Functional groups under a division</description>
        <inlineHelpText>Functional groups (as per the selected division) this objective is related to</inlineHelpText>
        <label>Functional Group</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraestructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passenger Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cargo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security &amp; Facilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Development &amp; Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Affairs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Did the objective started with some progress</description>
        <inlineHelpText>Was there an existing progress at the moment the objective was created</inlineHelpText>
        <label>Initial Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Objective is the current objective is a sub-objective</description>
        <inlineHelpText>If the current objective is a sub-objective, this field captures its parent objective.</inlineHelpText>
        <label>Parent Objective</label>
        <referenceTo>Objective__c</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region this objective is related to</description>
        <inlineHelpText>Region this objective is related to</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>AME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nth. Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the objective</description>
        <inlineHelpText>There is no automation between the Status and the Progress value. You should manually set a status if you want to flag the objective somehow for filtering or reporting purposes.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aborted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed without intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_region__c</fullName>
        <description>Some divisions may need to report at a sub-region level instead of regional</description>
        <inlineHelpText>Some divisions may need to report at a sub-region level instead of regional</inlineHelpText>
        <label>Sub-region</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>AFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MENA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Progress__c</fullName>
        <description>Percentage of progress</description>
        <formula>if ( Target__c == 0, 0, (Current__c) / Target__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of progress. Relationship between the target and the current value.</inlineHelpText>
        <label>Target Progress</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>Objective target value</description>
        <inlineHelpText>If this objective can be measured, what is the expected result to consider it complete</inlineHelpText>
        <label>Target Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Board Monitored Activity or Other Strategic Activity</description>
        <inlineHelpText>Board Monitored Activity, Other Strategic Activity, or other generic objective</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>BMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <description>Which unit the target refers to</description>
        <inlineHelpText>The unit used for target and its related values in this opportunity</inlineHelpText>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>is_Incomplete__c</fullName>
        <description>an objective is incomplete when it does not have filled the field Division, REgion, Area or Account depending on its Recordtype</description>
        <formula>OR(
AND(RecordType.DeveloperName == &quot;Division&quot;, TEXT(Division__c) = &quot;&quot; ),
AND(RecordType.DeveloperName == &quot;Region&quot;, TEXT(Region__c) == &quot;&quot; ),
AND(RecordType.DeveloperName == &quot;Area&quot;, TEXT(Area__c) == &quot;&quot; ),
AND(RecordType.DeveloperName == &quot;Account&quot;, Account__c == &quot;&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked if you started creating a sub-objective from a parent objective and didn&apos;t save your changes. The record will be waiting in the &quot;incomplete objectives&quot; until 24:00 GVA time</inlineHelpText>
        <label>is Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <label>Objective</label>
    <listViews>
        <fullName>AME_regional_objectives</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Division__c</columns>
        <columns>Region__c</columns>
        <columns>Area__c</columns>
        <columns>Current__c</columns>
        <columns>Target__c</columns>
        <columns>Target_Progress__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Africa &amp; Middle East</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Objective__c.Region</value>
        </filters>
        <label>AME regional objectives</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Account_Issues_Priorities</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Objective__c.Account_Issues_and_Priorities</value>
        </filters>
        <label>Account Issues &amp; Priorities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Division__c</columns>
        <columns>Region__c</columns>
        <columns>Area__c</columns>
        <columns>Deadline__c</columns>
        <columns>Target_Progress__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All objectives</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Incomplete_Objectives</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>is_Incomplete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Incomplete Objectives</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Levant_Area_Objectives</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Division__c</columns>
        <columns>Region__c</columns>
        <columns>Target__c</columns>
        <columns>Current__c</columns>
        <columns>Deadline__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Objective__c.Area</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Levant</value>
        </filters>
        <label>Levant Area Objectives</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Objectives_with_missing_Area_Objectives</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Division__c</columns>
        <columns>Region__c</columns>
        <columns>Area__c</columns>
        <columns>Deadline__c</columns>
        <columns>Target_Progress__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>All_Areas_Created__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Objectives with missing Area Objectives</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Objectives_with_missing_RegionObjectives</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Division__c</columns>
        <columns>Region__c</columns>
        <columns>Area__c</columns>
        <columns>Deadline__c</columns>
        <columns>Target_Progress__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>All_Regions_Created__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Objectives with missing RegionObjectives</label>
        <language>en_US</language>
    </listViews>
</CustomObject>